--- a/vue/testvue2/package.json
+++ b/vue/testvue2/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
     "supervisor": "^0.12.0",
+    "vant": "^2.9.3",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
