--- a/vue/testvue2/package.json
+++ b/vue/testvue2/package.json
@@ -9,10 +9,12 @@
   "dependencies": {
     "axios": "^0.19.2",
     "core-js": "^3.6.5",
+    "fastclick": "^1.0.6",
     "supervisor": "^0.12.0",
     "vant": "^2.9.3",
     "view-design": "^4.3.2",
     "vue": "^2.6.11",
+    "vue-lazyload": "^1.3.3",
     "vue-router": "^3.2.0",
     "vuex": "^3.4.0"
   },
